LTL3 Tools NEWS
-=-=-=-=-=-=-=-

Tue Feb 17 09:41:44 EST 2009            LTL3 tools 0.0.6

- Major performance improvements

- Fixed a bug that could lead to wrong monitors being created when
  the propsitions used were, in part, substrings of one another, e.g.
  m, mt, pmt, etc.

Fri Dec 26 04:36:21 EST 2008            LTL3 tools 0.0.5

- Fixed a bug in the minimisation algorithm which would not minimise
  ?-states properly when X-operators appeared in the formula

Thu Dec 25 01:29:08 EST 2008            LTL3 tools 0.0.4

- Added -m option to fsmcrossprod in order to minimise monitor FSM

- Fixed a bug in nevertofsm which could lead to AT&T's fsmlibrary's reject
  of the generated automaton; that is, states can no longer have a trailing
  zero which seems to confuse the fsmlibrary

Thu Jul 17 13:28:18 EST 2008:           LTL3 tools 0.0.3

- Fixed a non-termination bug which would cause stack overflow on certain
  formulae, such as "[] <> a"
  
- Formulae may now contain "->" and "<->"

- Propositions may now contain "_"

Thu Jul 10 13:47:39 EST 2008:           LTL3 tools 0.0.2

- Fixed parser error of never-claim parser

- Added colour option to fsmcrossprod

- Adjusted ltl2mon accordingly

Wed Jul 9 21:11:23 EST 2008:            LTL3 tools 0.0.1

- Released initial version 0.0.1
