@@ -1,6 +1,17 @@
 LTL3 Tools NEWS
 -=-=-=-=-=-=-=-
 
+Sat Mar 14 09:35:02 EST 2009            LTL3 tools 0.0.7
+
+- Added program formulatosymbols which takes a formula and returns a list
+  of symbols as required by AT&T's fsmlibrary
+
+- Changed the program extractalphabet to not only return all actions, but
+  the powerset of all actions, i.e., the alphabet of the Buchi automaton
+
+- Added -a option to nevertofsm and fsmcrossprod to receive a string
+  containing the alphabet (generated by extractalphabet, for example)
+
 Tue Feb 17 09:41:44 EST 2009            LTL3 tools 0.0.6
 
 - Major performance improvements
